# How-to-Build-ChatGPT

./: .gitignore  DEPLOYMENT.md  OpenAI_Agents_SDK.ipynb  OpenAI_Responses_API_Data_and_Connectors.ipynb  README.md  debug_test.py  pyproject copy.toml  pyproject.toml  setup.sh  test_api.py
api/: README.md  app.py
chatgpt/: README.md  env.template  package-lock.json  package.json  setup.sh  tailwind.config.ts  tsconfig.json  vercel.json
chatgpt/.next/: trace
chatgpt/.next/cache/webpack/client-development/: index.pack.gz.old
chatgpt/.next/cache/webpack/server-development/: index.pack.gz.old
chatgpt/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json
chatgpt/.next/server/vendor-chunks/: @upstash.js  agentkeepalive.js  ms.js  next.js  node-fetch.js  openai.js  tr46.js  uncrypto.js  webidl-conversions.js  whatwg-url.js
chatgpt/app/: globals.css  layout.tsx  page.tsx
chatgpt/app/api/config/: route.ts
chatgpt/app/api/threads/: route.ts
chatgpt/app/components/: ChatArea.tsx  GoogleAuth.tsx  MessageInput.tsx  MessageList.tsx  Sidebar.tsx
chatgpt/app/lib/: api.ts  store.ts
chatgpt/app/types/: index.ts
chatgpt/backend/: app.py  auth.py  database.py  models.py  openai_service.py  requirements.txt  schemas.py
chatgpt/components/: ChatComposer.tsx  ConversationControls.tsx  MessageList.tsx  ThreadSidebar.tsx
chatgpt/config/: connectors.ts
chatgpt/lib/: api.ts  openai.ts  store.ts  tools.ts  types.ts
data/: company_faq.json
frontend/: README.md  package-lock.json
frontend/pages/: index.js
(+10 files in other folders)
